Fix link for demo

--- a/resources/components/header-homepage.html
+++ b/resources/components/header-homepage.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container-header">
     <div class="logo">
-      <a href="/">
+      <a href="/index.html">
         <img src="/resources/images/logo.svg" alt="Vina Technology JSC">
       </a>
     </div>
@@ -12,8 +12,8 @@
           <a href="#" class="menu-item" data-menu="product-services">Products & Services</a>
           <img src="/resources/images/ic_dropdown_black.svg" alt="ic_dropdown">
           <div class="dropdown">
-            <a href="/resources/pages/product-service/optical-cutting/">Optical material die cutting</a>
-            <a href="/resources/pages/product-service/outsourcing-services/">Outsourcing services</a>
+            <a href="/resources/pages/product-service/optical-cutting/index.html">Optical material die cutting</a>
+            <a href="/resources/pages/product-service/outsourcing-services/index.html">Outsourcing services</a>
           </div>
         </li>
         <li><a href="/resources/pages/contact-us/index.html" class="menu-item" data-menu="contact-us">Contact Us</a>
