fix/fixbug-UI-1

--- a/resources/components/footer.html
+++ b/resources/components/footer.html
@@ -27,12 +27,14 @@
     </div>
     <div class="footer-column">
       <h3>SERVICES</h3>
-      <p>Optical material die cutting</p>
-      <p>Outsourcing services</p>
+      <a href="/resources/pages/product-service/optical-cutting/index.html" class="footer-link">Optical material die
+        cutting</a>
+      <a href="/resources/pages/product-service/outsourcing-services/index.html" class="footer-link">Outsourcing
+        services</a>
     </div>
     <div class="footer-column">
       <h3>ABOUT</h3>
-      <p>About us</p>
+      <a href="/resources/pages/about/index.html" class="footer-link">About us</a>
     </div>
   </div>
 </footer>
