--- a/resources/pages/product-service/outsourcing-services/styles.css
+++ b/resources/pages/product-service/outsourcing-services/styles.css
@@ -20,6 +20,10 @@ html {
   margin: 0 auto;
 }
 
+.custom-header-outsourcing-services {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
 /* ====================== IMAGE AND TITLE SECTION ====================== */
 .title-section {
   font-weight: 700;
@@ -44,6 +48,7 @@ html {
 /* ====================== OUTSOURCING SERVICES ====================== */
 .section-outsourcing-services {
   flex: 1;
+  /* padding: 5rem 21.313rem; */
   padding: 5rem 15.75rem;
 }
 
@@ -99,17 +104,18 @@ html {
   margin-bottom: 8px;
 }
 
-.card ul li i {
-  color: #ef4444;
-  margin-right: 8px;
+.card ul li img {
+  margin-right: 0.5rem;
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .card img {
   width: 100%;
   height: auto;
-  max-height: 320px;
+  max-height: 20rem;
   object-fit: cover;
-  border-radius: 8px;
+  border-radius: 0.5rem;
 }
 
 .space-img {
@@ -134,9 +140,16 @@ html {
 
 /* ====================== EQUIPMENT CAPACITY ====================== */
 .section-equipment-capacity {
-  flex: 1;
+  display: flex;
+  justify-content: center;
   background-color: #f9f9f9;
   padding: 7.5rem 15.75rem;
+}
+
+.content-equipment-capacity {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .title-section-equipment-capacity {
@@ -147,10 +160,13 @@ html {
   background-color: #fbab2e;
   display: inline;
   padding: 0.5rem;
+  margin: 0;
 }
 
 .img-equipment-capacity img {
   margin-top: 1.5rem;
+  max-width: 100%;
+  height: auto;
 }
 
 /* ====================== QUALITY CONTROL ====================== */
