--- a/resources/components/styles-css/header-homepage.css
+++ b/resources/components/styles-css/header-homepage.css
@@ -1,14 +1,10 @@
-.header {
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
 .header .container-header {
   height: 96px;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 1222px;
+  padding: 0rem 14.688rem;
 }
 
 .navbar .logo {
