--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -12,14 +12,14 @@ body {
   color: #333;
   background-color: white;
   text-rendering: optimizeLegibility;
+  overflow-x: hidden; /* xóa bỏ trạng thái có thanh scoll ngang khi F12 */
 }
 
 /* ====================== HEADER ====================== */
 .custom-header-home {
   background: url("/resources/images/bg.jpeg") no-repeat center center/cover;
-  height: 911px;
+  height: 56.938rem;
   color: white;
-  display: flex;
   justify-content: center;
 }
 
