--- a/resources/pages/contact-us/styles.css
+++ b/resources/pages/contact-us/styles.css
@@ -20,6 +20,10 @@ html {
   margin: 0 auto;
 }
 
+.custom-header-contact {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
 /* ====================== CONTACT-US ====================== */
 .contact-us {
   text-align: center;
@@ -32,6 +36,7 @@ html {
   font-size: 3rem;
 }
 
+/* ====================== CONTACT INFO ====================== */
 .contact-info {
   display: flex;
   justify-content: center;
@@ -39,13 +44,19 @@ html {
   margin-bottom: 5rem;
 }
 
+/* ====================== CONTACT CARD ====================== */
 .contact-card {
   background-color: #ee1b240a;
   padding: 2.5rem;
   border-radius: 0.75rem;
-  width: 600px;
+  width: 37.5rem;
   text-align: left;
   border: 1px solid #ee1b2433;
+  flex-shrink: 0;
+}
+
+.contact-info {
+  align-items: stretch;
 }
 
 .contact-card p {
@@ -88,4 +99,7 @@ html {
 
 main {
   flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
