--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -30,7 +30,7 @@ body {
   font-size: 0.875rem;
 }
 
-.custom-header-home .nav img {
+.custom-header-home .nav .dropdown-icon {
   content: url("/resources/images/ic_dropdown.svg");
 }
 
@@ -95,15 +95,17 @@ body {
 }
 
 .about-section p {
-  font-size: 20px;
+  font-size: 1.25rem;
+  color: #2b323bcc;
 }
 
 .style-core-products {
   background-color: #fbab2e;
   display: inline;
   font-size: 20px;
-  color: #ffffff;
+  color: #ffffff !important;
   font-weight: 400;
+  padding: 2px;
 }
 
 .about-section .core-products {
@@ -115,6 +117,7 @@ body {
 .about-section .core-products li {
   margin-bottom: 0.5rem;
   margin-left: 32px;
+  color: #2b323bcc;
 }
 
 .about-section .learn-more {
