--- a/resources/components/styles-css/footer.css
+++ b/resources/components/styles-css/footer.css
@@ -16,6 +16,7 @@
 
 .footer-column {
   margin: 0 1rem;
+  max-width: 21.375rem;
 }
 
 .footer-column h2,
@@ -25,7 +26,7 @@
 }
 
 .footer-column p {
-  margin: 0.5rem 0;
+  margin-bottom: 0.5rem;
   font-size: 16px;
   color: #ffffffcc;
   display: flex;
