--- a/resources/pages/product-service/optical-cutting/styles.css
+++ b/resources/pages/product-service/optical-cutting/styles.css
@@ -38,6 +38,8 @@ html {
 
 .container-img img {
   margin-top: 4rem;
+  max-width: 100%;
+  height: auto;
 }
 
 .custom-header-optical-cutting {
@@ -119,4 +121,59 @@ html {
 
 main {
   flex: 1;
+}
+
+/* ====================== Responsive Styles ====================== */
+@media (max-width: 1200px) {
+}
+
+@media (max-width: 768px) {
+  .container-optical-cutting {
+    padding: 3.5rem 2rem;
+  }
+
+  .title-optical-cutting {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .content-optical-cutting {
+    font-size: 1rem;
+  }
+
+  .title-section {
+    font-size: 2rem;
+  }
+
+  .container-cutting-application {
+    flex: 1;
+    text-align: center;
+    background-color: #f9f9f9;
+    padding: 5rem 0rem;
+  }
+
+  .container-product-photos {
+    flex: 1;
+    text-align: center;
+    padding: 5rem 0rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .container-optical-cutting {
+    padding: 2.5rem 2rem;
+  }
+
+  .title-optical-cutting {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+
+  .content-optical-cutting {
+    font-size: 0.85rem;
+  }
+
+  .title-section {
+    font-size: 1.5rem;
+  }
 }
