--- a/resources/pages/product-service/outsourcing-services/styles.css
+++ b/resources/pages/product-service/outsourcing-services/styles.css
@@ -43,6 +43,8 @@ html {
 
 .container-img img {
   margin-top: 4rem;
+  max-width: 100%;
+  height: auto;
 }
 
 /* ====================== OUTSOURCING SERVICES ====================== */
@@ -198,4 +200,54 @@ html {
 
 main {
   flex: 1;
+}
+
+/* ====================== Responsive Styles ====================== */
+@media (max-width: 1200px) {
+}
+
+@media (max-width: 768px) {
+  .section-outsourcing-services {
+    padding: 3.5rem 2rem;
+  }
+
+  .title-outsourcing-services {
+    margin-bottom: 1rem;
+  }
+
+  .container-img-outsourcing-services {
+    margin-top: 2rem;
+  }
+
+  .section-process-flow {
+    padding: 3.5rem 2rem;
+  }
+
+  .section-equipment-exhibition {
+    padding: 3.5rem 2rem;
+  }
+
+  .section-equipment-capacity {
+    padding: 3.5rem 2rem;
+  }
+
+  .section-quality-control {
+    padding: 3.5rem 2rem;
+  }
+
+  .content-quality-control {
+    font-weight: 400;
+    font-size: 1rem;
+    color: #2b323b;
+    margin-top: 1.5rem;
+    text-align: center;
+    width: auto;
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 480px) {
+  .title-outsourcing-services {
+    font-size: 1.5rem;
+  }
 }
