--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -6,13 +6,15 @@
 }
 
 /* Body Styling */
-body {
+body,
+html {
   font-family: "Nexa";
   line-height: 1.6;
   color: #333;
   background-color: white;
   text-rendering: optimizeLegibility;
   overflow-x: hidden; /* xóa bỏ trạng thái có thanh scoll ngang khi F12 */
+  width: 100%;
 }
 
 /* ====================== HEADER ====================== */
@@ -21,6 +23,14 @@ body {
   height: 56.938rem;
   color: white;
   justify-content: center;
+}
+
+.custom-header-home .drawer-toggle {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  color: #ffffff;
 }
 
 .custom-header-home .nav ul li a {
@@ -137,14 +147,26 @@ body {
   text-align: center;
 }
 
+.operation-section img {
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+
 /* ====================== Product Photos Section ====================== */
 .product-section {
   padding: 7.563rem 2rem;
   text-align: center;
 }
 
+.product-section img {
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+
 .product-section h2 {
-  font-size: 44px;
+  font-size: 2.75rem;
   color: #2b323b;
   font-weight: 700;
 }
@@ -240,22 +262,22 @@ body {
 
 .partners-logos {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 3rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .logo_row {
-  height: 5.375rem; /* 86px */
-  line-height: 5.375rem; /* 86px */
-  text-align: center; /* Center horizontally */
-  white-space: nowrap; /* Prevent logos from wrapping */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem 0;
 }
 
 .logo_row img {
   vertical-align: middle;
   display: inline-block;
-  margin: 0 2.5rem; /* 80px horizontal gap divided by 2 (left + right) = 5rem / 2 = 2.5rem */
+  margin: 0 2.5rem;
   max-height: 5.375rem;
   width: auto;
 }
@@ -301,5 +323,279 @@ body {
   .certifications-container img {
     width: 100%;
     max-width: 18.75rem;
+  }
+
+  .product-section h2 {
+    font-size: 2.5rem;
+    color: #2b323b;
+    font-weight: 700;
+  }
+
+  .product-section {
+    padding: 0rem 2rem;
+    text-align: center;
+  }
+}
+
+/* ====================== Responsive Styles ====================== */
+@media (max-width: 1200px) {
+  /* Vision, Mission, Values Section */
+  .values-section {
+    padding: 6.25rem 2rem !important;
+    background-color: #f9f9f9;
+    text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .custom-header-home {
+    background: url("/resources/images/bg.jpeg") no-repeat center center/cover;
+    height: 30rem;
+    color: white;
+    justify-content: center;
+  }
+
+  /* VISION MISSION, VALUES SECTION */
+  .values-section {
+    padding: 3.125rem 2rem !important;
+    background-color: #f9f9f9;
+    text-align: center;
+    margin-top: 5rem;
+  }
+
+  .values-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .line {
+    display: none;
+  }
+
+  .value-item h3 {
+    font-size: 1.5rem !important;
+    color: #2b323bb2;
+  }
+
+  .value-item p {
+    margin-top: 1rem;
+    font-size: 1.25rem !important;
+    color: #2b323b;
+  }
+
+  /* ABOUT SECTION */
+  .about-section {
+    height: 500px;
+  }
+
+  .about-image img {
+    height: 500px;
+  }
+
+  .about-section .about-content {
+    position: absolute;
+    left: 0rem;
+    bottom: 0rem;
+    top: 0rem;
+    background-color: white;
+    border-radius: 0rem;
+    width: 450px;
+    height: auto;
+    background-image: url("/resources/images/bg_sun.svg");
+    background-repeat: no-repeat;
+    background-position: bottom right;
+  }
+
+  .about-section p {
+    font-size: 0.8125rem;
+    color: #2b323bcc;
+  }
+
+  .style-core-products {
+    background-color: #fbab2e;
+    display: inline;
+    font-size: 20px;
+    color: #ffffff !important;
+    font-weight: 400;
+    padding: 2px;
+  }
+
+  .about-section .core-products {
+    text-align: left;
+    margin-bottom: 0rem;
+    margin-top: 2px;
+  }
+
+  .about-section .core-products li {
+    margin-bottom: 0.5rem;
+    margin-left: 32px;
+    color: #2b323bcc;
+    font-size: 1rem;
+  }
+
+  #style-title-vina {
+    display: none;
+  }
+
+  .about-section .learn-more {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    background-color: #ee1b24;
+    color: white;
+    text-decoration: none;
+    border-radius: 1rem;
+    margin-top: 0.5rem;
+  }
+
+  /* CUSTOMER SATISFACTION SECTION */
+  .satisfaction-section {
+    padding: 3rem 0rem;
+    background-image: url("/resources/images/bg_satisfaction.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+    text-align: center;
+  }
+
+  .content {
+    font-size: 2.5rem;
+    line-height: 3.5rem;
+  }
+
+  .sub-content {
+    margin-top: 0.5rem;
+  }
+
+  .tag-content {
+    font-size: 2.5rem;
+    background-color: #fbab2e;
+    padding: 0rem 1rem;
+    text-transform: uppercase;
+    margin-top: 2rem;
+    display: inline-block;
+  }
+
+  .logo_row {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .logo_row img {
+    max-height: 4rem;
+  }
+
+  .partners-logos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .logo_row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0;
+  }
+
+  .logo_row img {
+    max-height: 5.375rem;
+    width: auto;
+    margin: 0 1rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .partners-section {
+    padding: 2rem 2rem;
+    text-align: center;
+    background-color: #f9f9f9;
+  }
+}
+
+@media (max-width: 480px) {
+  .custom-header-home {
+    background: url("/resources/images/bg.jpeg") no-repeat center center/cover;
+    height: 25rem;
+    color: white;
+    justify-content: center;
+  }
+
+  /* Vision, Mission, Values Section */
+  .values-section {
+    padding: 2rem 0rem !important;
+    margin-top: 3rem;
+  }
+
+  .values-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .value-item {
+    margin-bottom: 1.5rem !important;
+    width: calc(100% - 4rem) !important;
+    margin: 0 2rem 1.5rem 2rem !important;
+  }
+
+  .value-item h3 {
+    font-size: 1.75rem !important;
+  }
+
+  .value-item p {
+    font-size: 1rem;
+    margin-top: 0rem !important;
+  }
+
+  .values-section img {
+    margin-bottom: 0rem !important;
+  }
+
+  /* ABOUT SECTION */
+  .about-section .about-content {
+    position: absolute;
+    left: 0rem;
+    bottom: 0rem;
+    top: 0rem;
+    background-color: white;
+    border-radius: 0rem;
+    width: 100%;
+    height: auto;
+    background-image: url("/resources/images/bg_sun.svg");
+    background-repeat: no-repeat;
+    background-position: bottom right;
+  }
+
+  .about-section p {
+    font-size: 0.85rem;
+    color: #2b323bcc;
+  }
+
+  /* CUSTOMER SATISFACTION SECTION */
+  .tag-content {
+    font-size: 1.5rem;
+    background-color: #fbab2e;
+    padding: 0rem 1rem;
+    text-transform: uppercase;
+    margin-top: 2rem;
+    display: inline-block;
+  }
+
+  .content {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .sub-content {
+    margin-top: 0.5rem;
+  }
+
+  .product-section h2 {
+    font-size: 2rem;
+    color: #2b323b;
+    font-weight: 700;
   }
 }
