feat/update-info-web-part2

--- a/resources/components/footer.html
+++ b/resources/components/footer.html
@@ -21,7 +21,7 @@
       </div>
       <p>
         <img src="/resources/images/ic_email.svg" alt="ic_location">
-        gmtung@vinatech.com.co
+        gmtung@vinatechcom.co
       </p>
       <p>
         <img src="/resources/images/ic_phone.svg" alt="ic_location">
